--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ewatomi",
-  "homepage": "https://Ameneterh.github.io/ewatomi-shop-online",
+  "homepage": "https://Ameneterh.github.io/ewatomi-shop-online/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
