--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
