--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ewatomi",
-  "homepage": "https://Ameneterh.github.io/ewatomi-shop-online/",
+  "homepage": "https://ewatomi-backend.vercel.app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
