--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.10"
   },
